@@ -9,6 +9,7 @@
  * add placeholders for missing rows in range query pseudo-RR (CASSANDRA-2680)
  * remove no-op HHOM.renameHints (CASSANDRA-2693)
  * clone super columns to avoid modifying them during flush (CASSANDRA-2675)
+ * close scrub file handles (CASSANDRA-2669)
 
 
 0.7.6
